add read more button

--- a/templates/base.html
+++ b/templates/base.html
@@ -1271,7 +1271,7 @@ return false;
 
 <script>
   $(document).ready(function(){
-    $(html).mouseleave(function(){
+    $(document).mouseleave(function(){
         $("#exampleModal").modal("show");
     });
 });
