add read more button

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1119,7 +1119,7 @@ video::-webkit-media-controls {
     width: 90%;
     margin: 0 auto;
     top: -80px;
-    height: 880px;
+    height: auto;
 }
 
 .team_member_section p a {
