--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,7 @@
    <title>WNDR.com</title>
    <meta charset="utf-8">
    <meta name="viewport" content="width=device-width; initial-scale=1; maximum-scale=1">
-   <meta property="og:url" content="https://www.wndr.com/webpage/" />
+   <meta property="og:url" content="https://cdn.pixabay.com/photo/2022/09/07/21/23/ferris-wheel-7439636_960_720.jpg" />
    <!-- <meta http-equiv="ScreenOrientation" content="autoRotate:disabled"> -->
    <!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
  
