--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,7 @@
    <title>WNDR.com</title>
    <meta charset="utf-8">
    <meta name="viewport" content="width=device-width; initial-scale=1; maximum-scale=1">
-   <meta property="og:image" content="https://wndr.nyc3.digitaloceanspaces.com/WOW_PC-min.png" />
+   <meta property="og:url" content="https://wndr.nyc3.digitaloceanspaces.com/WOW_PC-min.png"/>
    <!-- <meta http-equiv="ScreenOrientation" content="autoRotate:disabled"> -->
    <!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
  
