--- a/templates/base.html
+++ b/templates/base.html
@@ -13,6 +13,7 @@
    <meta property="og:type" content="website" />
    <meta property="og:url" content="https://www.wndr.com" />
    <meta property="og:image:url" content="https://wndr.nyc3.digitaloceanspaces.com/WOW_PC-min.png" />
+   <meta property="og:description" content="Wndrland" />
    <!-- <meta http-equiv="ScreenOrientation" content="autoRotate:disabled"> -->
    <!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
  
