--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,7 @@
    <title>WNDR.com</title>
    <meta charset="utf-8">
    <meta name="viewport" content="width=device-width; initial-scale=1; maximum-scale=1">
-   <meta property="og:title" content="Site Title" />
+   <meta property="og:title" content="Wndrland" />
    <meta property="og:type" content="website" />
    <meta property="og:url" content="http://my.website.com" />
    <meta property="og:image:url" content="https://wndr.nyc3.digitaloceanspaces.com/WOW_PC-min.png" />
