--- a/templates/base.html
+++ b/templates/base.html
@@ -62,7 +62,7 @@
    <div class="mobilelandscapeview" style="position:relative;">
        <div class="landscape_view1">
            <p>Back to Viewing Mode</p>
-           <img class="back_to_mode" src="{% static 'image/phone_rotate_black.png' %}">
+           <img class="back_to_mode" src="https://wndr.nyc3.digitaloceanspaces.com/WOW_PC-min.png">
        </div>
    </div>
  
