--- a/templates/base.html
+++ b/templates/base.html
@@ -14,6 +14,7 @@
    <meta property="og:url" content="http://my.website.com" />
    <meta property="og:image:url" content="https://wndr.nyc3.digitaloceanspaces.com/WOW_PC-min.png" />
    <meta property="og:description" content="Site description" />
+   <meta property="og:image" content="https://wndr.nyc3.digitaloceanspaces.com/WOW_PC-min.png" />
    <!-- <meta http-equiv="ScreenOrientation" content="autoRotate:disabled"> -->
    <!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
  
