--- a/templates/home.html
+++ b/templates/home.html
@@ -29,12 +29,16 @@
 			  </span>-->
 			  <div class="sbscribe_btn_input">
 				<span>
-					<input type="email" name="myInput1" required  id="myInput1" value="" placeholder="Enter email">
+					<input type="text" name="myInput1"  id="myInput1" value="" placeholder="Enter email">
 				</span>
 				</div>
+			
 			 
 			  <div class="alert alert-danger success-msg" id="sucess_div1" role="alert" hidden>
 				<span id="sucess1" ></span>
+			  </div>
+			  <div class="alert alert-danger error-msg" id="error_div1" role="alert" hidden>
+				<span id="error1" ></span>
 			  </div>
 				  <!-- <div class="alert alert-danger danger-msg" role="alert">
 					This is a danger alert—check it out!
@@ -66,10 +70,13 @@
 				<div class="banner-WNDR-outer">
 					<div class="banner-WNDR-btn">
 						<span class="WNDR-btn-item WNDR_btn_home animated uk-scrollspy-inview" uk-scrollspy="cls: uk-animation-slide-left; delay: 300; repeat: true">
-						<input type="email" name="myInput2" value="" id="myInput2" placeholder="Enter email"></span><br>
+						<input type="text" name="myInput2" value="" id="myInput2" placeholder="Enter email"></span><br>
 						<div class="alert alert-danger sueccs-msg" id="sucess_div2" role="alert" hidden>
 							<span id="sucess2" ></span>
-						  </div>
+						</div>
+						<div class="alert alert-danger error-msg" id="error_div2" role="alert" hidden>
+							<span id="error2" ></span>
+						</div>
 						<div class="sucess_mesg">
 							<p class=""></p> <!--Remove Sucessfull inside the paragraph tag and class named "bnr_sucess_mesg" in p class--> 
 						</div>
@@ -406,13 +413,17 @@
 							</span>-->
 							<div class="sbscribe_btn_input">
 								<span>
-									<input type="email" name="myInput3" id="myInput3" value="" placeholder="Enter email">
+									<input type="text" name="myInput3" id="myInput3" value="" placeholder="Enter email">
 								</span>
 
 								<div class="alert alert-danger sueccs-msg" id="sucess_div3" role="alert" hidden>
 									<span id="sucess3"></span>
 								  </div>
-								</div>
+								  <div class="alert alert-danger error-msg" id="error_div3" role="alert" hidden>
+									<span id="error3"></span>
+								  </div>
+
+							</div>
 								<!-- <div class="alert alert-danger danger-msg" role="alert">
 								  This is a danger alert—check it out!
 								</div>-->
