--- a/templates/base.html
+++ b/templates/base.html
@@ -40,9 +40,10 @@
    <script src="https://kit.fontawesome.com/1086841b1d.js" crossorigin="anonymous"></script>
 
 
-<!-- Google tag (gtag.js) -->
-   <script async src="https://www.googletagmanager.com/gtag/js?id=G-W5RCLP680E"></script>
- 
+<!-- Google tag (gtag.js)
+   <script async src="https://www.googletagmanager.com/gtag/js?id=G-W5RCLP680E"></script> -->
+   <script async src="https://www.googletagmanager.com/gtag/js?id=AW-10997461539"></script>
+
  
    <!-- fav icon -->
    <link rel="icon" type="image/x-icon" href="{% static 'image/fab-ic.png' %}">
@@ -51,6 +52,20 @@
    <!-- <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script> -->
  
    </style>
+
+   <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+   
+    gtag('config', 'AW-10997461539');
+  </script>
+
+
+<!-- Event snippet for Subscribe conversion page -->
+<script>
+    gtag('event', 'conversion', {'send_to': 'AW-10997461539/L2prCLTdkeMDEKPk__so'});
+  </script>
 </head>
  
  
@@ -536,15 +551,26 @@
                        }
                    });
                });
- 
+
+               var testEmail = /^([a-zA-Z0-9_.+-])+\@(([a-zA-Z0-9-])+\.)+([a-zA-Z0-9]{2,4})+$/;  
                $("#load-image-of-modal-subscibe1").hide()
                function myFunction1() {
                    email = $('#myInput1').val();
                    console.log("Arrivals-----0")
                    console.log(email)
-                   $("#btn-d1").attr("disabled", true);
-                   if (email != '') {
+                
+                   if(email.length == 0){
+                  
+                    document.getElementById("error_div1").hidden = false;
+                    document.getElementById("error1").innerHTML = "Please Enter Email"
+                    $("#error_div1").show().delay(3000).fadeOut();
+                    
+                                 
+                 }
+                   else if (testEmail.test(email)) {
                        $("#load-image-of-modal-subscibe1").show()
+                       $.getScript('https://www.googletagmanager.com/gtag/js?id=AW-10997461539');
+                    
                        console.log("abc")
                        $.ajax({
                            type: "POST",
@@ -565,18 +591,34 @@
                            },
                        });
                    }
+                   else {
+                      
+                      document.getElementById("error_div1").hidden = false;
+                      document.getElementById("error1").innerHTML = "Invalid Email"
+                      $("#error_div1").show().delay(3000).fadeOut();
+                  }
                }
+               
+               var testEmail = /^([a-zA-Z0-9_.+-])+\@(([a-zA-Z0-9-])+\.)+([a-zA-Z0-9]{2,4})+$/;  
                $("#load-image").hide()
                function myFunction2() {
  
                    email = $('#myInput2').val();
                    console.log("Arrivals-----1")
                    console.log(email)
-                   $("#btn-d2").attr("disabled", true);
- 
-                   if (email != '') {
-                       console.log("abc")
+        
+                   if (email.length == 0){
+                  
+                    document.getElementById("error_div2").hidden = false;
+                    document.getElementById("error2").innerHTML = "Please Enter Email"
+                    $("#error_div2").show().delay(3000).fadeOut();
+                   
+                                   
+                   }
+                   else if (testEmail.test(email)) {
                        $("#load-image").show()
+                       $.getScript('https://www.googletagmanager.com/gtag/js?id=AW-10997461539');
+                       console.log("----")
                        $.ajax({
                            type: "POST",
  
@@ -598,7 +640,12 @@
  
                            },
                        });
-                   }
+                   }else {
+                      
+                    document.getElementById("error_div2").hidden = false;
+                    document.getElementById("error2").innerHTML = "Invalid Email"
+                    $("#error_div2").show().delay(3000).fadeOut();
+                }
                }
  
  
@@ -608,9 +655,17 @@
                    email = $('#myInput3').val();
                    console.log("Arrivals-----2")
                    console.log(email)
-                   $("#btn-d3").attr("disabled", true);
-                   if (email != '') {
+                   if (email.length == 0){
+                  
+                  document.getElementById("error_div3").hidden = false;
+                  document.getElementById("error3").innerHTML = "Please Enter Email"
+                  $("#error_div3").show().delay(3000).fadeOut();
+                 
+                                 
+                 }
+                   else if (testEmail.test(email)) {
                        $("#load-image-of-arrival2").show()
+                       $.getScript('https://www.googletagmanager.com/gtag/js?id=AW-10997461539');
                        console.log("abc")
                        $.ajax({
                            type: "POST",
@@ -631,6 +686,12 @@
                            },
                        });
                    }
+                   else {
+                      
+                      document.getElementById("error_div3").hidden = false;
+                      document.getElementById("error3").innerHTML = "Invalid Email"
+                      $("#error_div3").show().delay(3000).fadeOut();
+                  }
                }
  
  
@@ -1263,16 +1324,6 @@ return false;
 
 <!-- Google tag (gtag.js) -->
 
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-W5RCLP680E');
-</script>
-
-   
-
 
 <script>
   $(document).ready(function(){
@@ -1280,21 +1331,6 @@ return false;
         $("#exampleModal").modal("show");
     });
 });
-</script>
-
-<script>
-//     window.addEventListener("beforeunload", function (e) {
-       
-  
- 
-//   var confirmationMessage = $("#exampleModal").modal("show")
-
-//   (e || window.event).returnValue = confirmationMessage; //Gecko + IE
-//   return confirmationMessage;   
-//   setTimeout(function() {
-//   3000 
-//     });
-//       });
 </script>
 
 
