--- a/static/css/style.css
+++ b/static/css/style.css
@@ -187,7 +187,7 @@ div#load-image {
     width: 100%;
 }
 
-.no-dwonload_section h2 {
+.no-dwonload_section h3 {
     font-family: 'neuropolregular';
     color: #f3012d;
     font-size: 46px;
@@ -863,7 +863,8 @@ video::-webkit-media-controls {
     background: transparent;
     color: #fff;
     padding: 50px;
-    padding-left: 140px;
+    padding-left: 100px;
+    padding-right: 100px;
 }
 
 .WNDR_btn_home {
@@ -1449,7 +1450,7 @@ div#exampleModal {
     max-width: 337px;
 }
 
-#exampleModal .sbscribe-bg h2 {
+#exampleModal .sbscribe-bg h4 {
     padding-top: 70px;
     font-size: 26px;
 }
@@ -1823,7 +1824,7 @@ img.banner-img-bg-mobile {
     padding: 0 78px;
 }
 
-.about-WNDR-outer h1 {
+.about-WNDR-outer h2 {
     font-size: 60px;
     font-weight: 400;
     color: #131418;
@@ -2021,7 +2022,7 @@ img.gallary-line {
     margin-right: 42px;
 }
 
-.slect-pvc-live h2 {
+.slect-pvc-live h4 {
     font-family: 'neuropolregular';
     color: #f3012d;
     font-size: 50px;
@@ -3518,7 +3519,7 @@ section.wndr-coins:before {
     background: rgb(0 0 0 / 35%);
 }
 
-.sbscribe-bg h2 {
+.sbscribe-bg h4 {
     font-size: 34px;
     position: relative;
     font-family: 'neuropolregular';
@@ -3932,7 +3933,7 @@ img.box-shadow-about {
 }
 
 
-.slect-pvc-live h2 {
+.slect-pvc-live h4 {
     font-family: 'neuropolregular';
     color: #f3012d;
     font-size: 46px;
@@ -5001,7 +5002,7 @@ img.blog-section-img-tabs {
         padding: 0px 126px;
     }
 
-    .slect-pvc-live h2 {
+    .slect-pvc-live h4 {
         font-size: 46px;
     }
 
@@ -5129,7 +5130,7 @@ img.blog-section-img-tabs {
         margin: 0 auto;
     }
 
-    .about-WNDR-outer h1 {
+    .about-WNDR-outer h2 {
         font-size: 52px;
     }
 
@@ -5171,7 +5172,7 @@ img.blog-section-img-tabs {
         margin-bottom: 0px;
     }
 
-    .slect-pvc-live h2 {
+    .slect-pvc-live h4 {
         font-size: 40px;
     }
 
@@ -5371,7 +5372,7 @@ img.blog-section-img-tabs {
     /*banner end*/
 
     /*about start*/
-    .about-WNDR-outer h1 {
+    .about-WNDR-outer h2 {
         font-size: 50px;
     }
 
@@ -5412,7 +5413,7 @@ img.blog-section-img-tabs {
         margin-bottom: 0px;
     }
 
-    .slect-pvc-live h2 {
+    .slect-pvc-live h4 {
         font-size: 50px;
     }
 
@@ -5751,7 +5752,7 @@ img.blog-section-img-tabs {
         margin-top: 11px;
     }
 
-    .about-WNDR-outer h1 {
+    .about-WNDR-outer h2 {
         font-size: 50px;
         padding-top: 35px;
     }
@@ -5785,7 +5786,7 @@ img.blog-section-img-tabs {
         margin-bottom: 0px;
     }
 
-    .slect-pvc-live h2 {
+    .slect-pvc-live h4 {
         font-size: 40px;
     }
 
@@ -6382,7 +6383,7 @@ img.blog-section-img-tabs {
         display: none;
     }
 
-    .about-WNDR-outer h1 {
+    .about-WNDR-outer h2 {
         font-size: 36px;
         line-height: 40px;
         padding-top: 40px;
@@ -6453,7 +6454,7 @@ img.blog-section-img-tabs {
         right: -52px;
     }
 
-    .slect-pvc-live h2 {
+    .slect-pvc-live h4 {
         font-size: 40px;
     }
 
@@ -6462,7 +6463,7 @@ img.blog-section-img-tabs {
         padding-right: 75px;
     }
 
-    .slect-pvc-live h2 {
+    .slect-pvc-live h4 {
         font-size: 30px;
     }
 
@@ -6929,7 +6930,7 @@ img.blog-section-img-tabs {
         height: 311px;
     }
 
-    .slect-pvc-live h2 {
+    .slect-pvc-live h4 {
         font-size: 28px;
     }
 
@@ -7845,7 +7846,7 @@ img.blog-section-img-tabs {
         display: none;
     }
 
-    .about-WNDR-outer h1 {
+    .about-WNDR-outer h2 {
         font-size: 36px;
         line-height: 40px;
         padding-top: 40px;
@@ -7909,7 +7910,7 @@ img.blog-section-img-tabs {
         right: -52px;
     }
 
-    .slect-pvc-live h2 {
+    .slect-pvc-live h4 {
         font-size: 40px;
     }
 
@@ -7918,7 +7919,7 @@ img.blog-section-img-tabs {
         padding-right: 75px;
     }
 
-    .slect-pvc-live h2 {
+    .slect-pvc-live h4 {
         font-size: 30px;
     }
 
@@ -8562,7 +8563,7 @@ img.blog-section-img-tabs {
     }
     
     
-    .no-dwonload_section h2 {
+    .no-dwonload_section h3 {
         font-size: 32px;
         margin-bottom: 11px;
     }
@@ -8653,7 +8654,7 @@ img.blog-section-img-tabs {
         display: block;
     }
 
-    .slect-pvc-live h2 {
+    .slect-pvc-live h4 {
         font-size: 19px;
         margin-bottom: 6px;
     }
@@ -9307,7 +9308,7 @@ img.blog-section-img-tabs {
 }
 
 @media only screen and (min-width: 1600px) {
-    #exampleModal .sbscribe-bg h2 {
+    #exampleModal .sbscribe-bg h4 {
         padding-top: 30px;
     }
 }
@@ -9459,7 +9460,7 @@ img.blog-section-img-tabs {
     /*banner end*/
 
     /*about start*/
-    .about-WNDR-outer h1 {
+    .about-WNDR-outer h2 {
         font-size: 30px;
         line-height: 26px;
         padding-top: 30px;
@@ -9496,7 +9497,7 @@ img.blog-section-img-tabs {
     /*about end*/
 
     /*gallary start*/
-    .slect-pvc-live h2 {
+    .slect-pvc-live h4 {
         font-size: 32px;
         margin-bottom: 6px;
     }
@@ -10245,7 +10246,7 @@ img.blog-section-img-tabs {
     }
     /* css 20/09/22 */
 
-    .slect-pvc-live h2 {
+    .slect-pvc-live h4 {
         font-size: 26px;
         margin-bottom: 4px;
     }
@@ -10576,7 +10577,7 @@ img.blog-section-img-tabs {
         display: none;
     }
 
-    .about-WNDR-outer h1 {
+    .about-WNDR-outer h2 {
         font-size: 30px;
         line-height: 26px;
         padding-top: 30px;
@@ -10631,7 +10632,7 @@ img.blog-section-img-tabs {
         padding-top: 44px;
     }
 
-    .slect-pvc-live h2 {
+    .slect-pvc-live h4 {
         font-size: 26px;
         margin-bottom: 4px;
     }
@@ -11161,7 +11162,7 @@ img.blog-section-img-tabs {
         top: -4px;
     }
 
-    #exampleModal .sbscribe-bg h2 {
+    #exampleModal .sbscribe-bg h4 {
         padding-top: 0px;
     }
 
@@ -11376,7 +11377,7 @@ img.blog-section-img-tabs {
         display: none;
     }
 
-    .about-WNDR-outer h1 {
+    .about-WNDR-outer h2 {
         font-size: 30px;
         line-height: 26px;
         padding-top: 30px;
@@ -11425,7 +11426,7 @@ img.blog-section-img-tabs {
         padding-top: 44px;
     }
 
-    .slect-pvc-live h2 {
+    .slect-pvc-live h4 {
         font-size: 26px;
         margin-bottom: 4px;
     }
@@ -12814,7 +12815,7 @@ img.blog-section-img-tabs {
 
     /*banner end*/
     /*about start*/
-    .about-WNDR-outer h1 {
+    .about-WNDR-outer h2 {
         font-size: 24px;
         line-height: 26px;
         padding-top: 20px;
@@ -12849,7 +12850,7 @@ img.blog-section-img-tabs {
     /*about end*/
 
     /*gallary start*/
-    .slect-pvc-live h2 {
+    .slect-pvc-live h4 {
         font-size: 20px;
     }
 
@@ -13832,7 +13833,7 @@ img.blog-section-img-tabs {
         background-size: cover;
     }
 
-    .about-WNDR-outer h1 {
+    .about-WNDR-outer h2 {
         font-size: 24px;
         line-height: 26px;
         padding-top: 30px;
@@ -13990,7 +13991,7 @@ img.blog-section-img-tabs {
 
     /*banner end*/
     /*about start*/
-    .about-WNDR-outer h1 {
+    .about-WNDR-outer h2 {
         font-size: 24px;
         line-height: 26px;
         padding-top: 20px;
@@ -14025,7 +14026,7 @@ img.blog-section-img-tabs {
     /*about end*/
 
     /*gallary start*/
-    .slect-pvc-live h2 {
+    .slect-pvc-live h4 {
         font-size: 20px;
     }
 
@@ -14199,7 +14200,7 @@ img.blog-section-img-tabs {
     i.fa-solid.fa-expand {
         display: none;
     }
-    #exampleModal .sbscribe-bg h2 {
+    #exampleModal .sbscribe-bg h4 {
         padding-top: 0px;
         font-size: 26px;
         line-height: 38px;
@@ -14287,7 +14288,7 @@ img.blog-section-img-tabs {
         font-size: 12px !important;
     }
 
-    .no-dwonload_section h2 {
+    .no-dwonload_section h3 {
         font-size: 22px;
     }
 
@@ -14679,7 +14680,7 @@ img.blog-section-img-tabs {
         height: 500px !important;
     }
 
-    #exampleModal .sbscribe-bg h2 {
+    #exampleModal .sbscribe-bg h4 {
         font-size: 22px;
         line-height: 33px;
     }
@@ -14851,7 +14852,7 @@ img.blog-section-img-tabs {
         margin-top: 12px;
     }
 
-    .about-WNDR-outer h1 {
+    .about-WNDR-outer h2 {
         font-size: 20px;
         line-height: 26px;
         padding-top: 20px;
@@ -14903,7 +14904,7 @@ img.blog-section-img-tabs {
         padding: 0px 0px 0px 0px;
     }
 
-    .slect-pvc-live h2 {
+    .slect-pvc-live h4 {
         font-size: 20px;
     }
 
@@ -15923,7 +15924,7 @@ img.blog-section-img-tabs {
         font-size: 20px;
     }
 
-    #exampleModal .sbscribe-bg h2 {
+    #exampleModal .sbscribe-bg h4 {
         font-size: 24px;
         line-height: 34px;
     }
@@ -16034,7 +16035,7 @@ img.blog-section-img-tabs {
         left: 0;
     }
 
-    .about-WNDR-outer h1 {
+    .about-WNDR-outer h2 {
         font-size: 20px;
         line-height: 22px;
     }
