--- a/templates/contact.html
+++ b/templates/contact.html
@@ -292,7 +292,7 @@
 				<img src="{% static 'image/footer-line-down-mobile.png' %}" class="bottom-line-mobile" alt="footer4">
 			</div>
 			<div class="footer-shapes">
-				<img src="{% static 'image/footer-img.png' %}" class="footer-left-ic" alt="footer5">
+				<img src="{% static 'image/footer-img.png' %}" class="footer-left-ic" alt="footerleft_img">
 				<img src="{% static 'image/footer-img2.png' %}" class="footer-right-ic" alt="footer6">
 			</div>
 			<div class="container">
@@ -300,7 +300,7 @@
 					<div class="row footer-align">
 						<div class="col-md-3 col-lg-4 mbl-footer-img">
 							<div class="footer-logo">
-								<img src="{% static 'image/header-logo.png' %}" alt="footer7">
+								<img src="{% static 'image/header-logo.png' %}" alt="footerLogo">
 							</div>
 						</div>
 						<div class="col-md-5 col-lg-5 copyright-footer">
