--- a/templates/base.html
+++ b/templates/base.html
@@ -209,15 +209,15 @@
                            alt="footer4">
                    </div>
                    <div class="footer-shapes">
-                       <img src="{% static 'image/footer-img.png' %}" class="footer-left-ic" alt="footerLeft_img">
-                       <img src="{% static 'image/footer-img2.png' %}" class="footer-right-ic" alt="footerRight_img">
+                       <img src="{% static 'image/footer-img.png' %}" class="footer-left-ic" alt="footer5">
+                       <img src="{% static 'image/footer-img2.png' %}" class="footer-right-ic" alt="footer6">
                    </div>
                    <div class="container">
                        <div class="footer-outer">
                            <div class="row footer-align">
                                <div class="col-md-3 col-lg-4 mbl-footer-img">
                                    <div class="footer-logo">
-                                       <img src="{% static 'image/header-logo.png' %}" alt="footerLogo">
+                                       <img src="{% static 'image/header-logo.png' %}" alt="footer7">
                                    </div>
                                </div>
                                <div class="col-md-5 col-lg-5 copyright-footer">
@@ -1331,7 +1331,7 @@ return false;
         $("#exampleModal").modal("show");
     });
 });
-</script> 
+</script>
 
 
  </div>
