--- a/templates/base.html
+++ b/templates/base.html
@@ -9,6 +9,7 @@
    <title>WNDR.com</title>
    <meta charset="utf-8">
    <meta name="viewport" content="width=device-width; initial-scale=1; maximum-scale=1">
+   <meta name="google-site-verification" content="QH1Am3UNtUywGs9Ut9SFYPdWcoTumzm_IdXB0aDVzD4" />
    <meta property="og:title" content="Wndrland" />
    <meta property="og:type" content="website" />
    <meta property="og:url" content="http://my.website.com" />
@@ -231,7 +232,7 @@
  
  
                                        <ul>
- 
+
                                            <li class="uk-scrollspy-inview"
                                                uk-scrollspy="cls: uk-animation-slide-top; delay: 200; repeat: true">
                                                <a href="#">
