--- a/templates/our-vision.html
+++ b/templates/our-vision.html
@@ -47,7 +47,7 @@
 						<h2>Subscribe to Our Newsletter</h2>
 						<img src="{% static 'image/nesltr-line.png' %}" class="subscribe-line-pc" alt="newsletter-line">
 						<img src="{% static 'image/subscribe-line-tabs.png' %}" class="subscribe-line-tabs"
-							alt="newsletter-line1">
+							alt="subscribe-line-tabs">
 						<p>Subscribe here to get the latest news on WNDR events, launch dates, SDK release, WNDR coin and NFT drops. </p>
 						<form method="post" onsubmit="return false;">
 
@@ -90,16 +90,16 @@
 		<header class="header-tag-WNDR">
 			<div class="header_WNDR">
 				<div class="header-line header-line-shadow1">
-					<img src="{% static 'image/header-line-top.png' %}" class="header-line-pc" alt="header-linee">
+					<img src="{% static 'image/header-line-top.png' %}" class="header-line-pc" alt="header-line-top">
 					<img src="{% static 'image/header-line-top-tabs.png' %}" class="header-line-tabs"
-						alt="header-linee1">
+						alt="header-line-top-tab">
 					<img src="{% static 'image/header-line-top-mobile.png' %}" class="header-line-mobile"
-						alt="header-linee2">
+						alt="header-line-top-mobile">
 				</div>
 				<div class="container">
 					<nav class="navbar navbar-expand-lg navbar-light">
 						<a class="navbar-brand" href="{% url 'home' %}"><img src="{% static 'image/header-logo.png' %}"
-								alt="logo1"></a>
+								alt="header-logo"></a>
 						<button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse"
 							data-bs-target="#bdNavbar" aria-controls="bdNavbar" aria-expanded="false"
 							aria-label="Toggle navigation">
@@ -139,11 +139,11 @@
 				</div>
 				<div class="header-line header-line-shadow">
 					<img src="{% static 'image/header-line-down.png' %}" class="header-line-down-pc"
-						alt="header-line-center">
+						alt="header-line-down">
 					<img src="{% static 'image/header-line-down-tabs.png' %}" class="header-line-down-tabs"
-						alt="header-line-center1">
+						alt="header-line-down-tabs">
 					<img src="{% static 'image/header-line-down-mobile.png' %}" class="header-line-down-mobile"
-						alt="header-line-center2">
+						alt="header-line-down-mobile">
 				</div>
 			</div>
 		</header>
@@ -153,7 +153,7 @@
 			<div class="row">
 				<div class="col-md-12 our-vision-hdng">
 					<div class="banner-logo-vision animated">
-						<img src="{% static 'image/banner-logo.png' %}" class="banner-logo-remv" alt="logo-banner-1">
+						<img src="{% static 'image/banner-logo.png' %}" class="banner-logo-remv" alt="banner-logo">
 					</div>
 					<h1 class="uk-scrollspy-inview hide_mbl_vision">Our Vision</h1>
 					<div class="banner-WNDR-btn mobile_section_vision">
@@ -166,13 +166,13 @@
 			</div>
 		</div>
 		<div class="vision-lineas vision_top_lineas">
-			<img src="/static/image/footer-line-top.png" class="top-line" alt="vision-header">
+			<img src="/static/image/footer-line-top.png" class="top-line" alt="footer-line-top">
 		</div>
 		<div class="vision_lineas_mbl vision_top_lineas">
-			<img src="/static/image/visionline-top-mobile.png" class="" alt="vision-header">
+			<img src="/static/image/visionline-top-mobile.png" class="" alt="visionline-top-mobile">
 		</div>
 	</div>
-	<!---OUR VISION SECTION---->
+	<!---OUR VISION SECTION -->
 	<button onclick="topFunction()" id="myBtntopd" title="Go to top"><i class='fa fa-angle-up'></i></button>
 	<section class="our-vision-content paper-bg ">
 
@@ -191,7 +191,7 @@
 					</span>
 					
 					<span class="uk-scrollspy-inview tp-txt">
-						<img src="{% static 'image/Slide6.JPG' %} "  alt="slide1">
+						<img src="{% static 'image/Slide6.JPG' %} "  alt="slide6">
 			
 					<p> Debate about what, exactly, the Metaverse is or isn’t is outside the scope of this document.
 						However, at a high level, when most people think of the “Metaverse,” they are often thinking
@@ -210,7 +210,7 @@
 			</div>
 		</div>
 		<div class="vision-line ">
-			<img src="{% static 'img/our-vision-line.png' %}" alt="line">
+			<img src="{% static 'img/our-vision-line.png' %}" alt="our-vision-line">
 		</div>
 	</section>
 	<section class="our-vision-content wndr-bg2">
@@ -240,7 +240,7 @@
 						</p>
 					
 					<span class="uk-scrollspy-inview tp-txt ">
-						<img src="{% static 'image/Slide3.JPG' %}" alt="slide2">
+						<img src="{% static 'image/Slide3.JPG' %}" alt="Slide3">
 					
 					 <p class="uk-scrollspy-inview">So, while WNDR will produce a library of games and experiences
 						in-house, the company’s approach is predicated on a model that has more in common with YouTube
@@ -252,7 +252,7 @@
 						hardware and peripherals, WNDR’s model is a far more democratic one. Simply put, our market is
 						EVERYONE that has access to the Internet and short, engaging entertainment experiences.</p>
 					 <span class="uk-scrollspy-inview tp-txt ">
-						<img src="{% static 'image/Slide2.JPG' %}" alt="slide2">
+						<img src="{% static 'image/Slide2.JPG' %}" alt="Slide2">
 					
 					<p class="uk-scrollspy-inview">Today, the accessibility and speed of the Internet is giving us
 						access to the world in seconds. Users are consuming more content and on-the-go. We scroll past
@@ -273,7 +273,7 @@
 		</div>
 		
 		<div class="vision-line ">
-			<img src="{% static 'img/our-vision-line.png' %}" alt="line">
+			<img src="{% static 'img/our-vision-line.png' %}" alt="our-vision-line">
 		</div>
 	</section>
 	<section class="our-vision-content wndr-bg-img">
@@ -301,7 +301,7 @@
 					
 					<span class="uk-scrollspy-inview tp-txt">
 						
-						<img src="{% static 'image/Slide9.JPG' %}"  oncontextmenu="return!1" alt="slide3">
+						<img src="{% static 'image/Slide9.JPG' %}"  oncontextmenu="return!1" alt="slide9">
 					
 					</span>
 				
@@ -314,7 +314,7 @@
 			</div>
 		</div>
 		<div class="vision-line ">
-			<img src="{% static 'img/our-vision-line.png' %}" alt="line">
+			<img src="{% static 'img/our-vision-line.png' %}" alt="our-vision-line">
 		</div>
 	</section>
 	<section class="our-vision-content experience-line">
@@ -334,7 +334,7 @@
 					<div class="row wall_streat_mess">
 						<div class="col-md-6 my-auto">
 							<span class="wll-srtr uk-scrollspy-inview ">
-								<img src="{% static 'image/Slide 14.jpg' %}" alt="slides">
+								<img src="{% static 'image/Slide 14.jpg' %}" alt="slide14">
 							</span>
 						</div>
 						<div class="col-md-6">
@@ -441,7 +441,7 @@
 							are truly astounding at scale.
 						</p>
 						<span class="wll-srtr uk-scrollspy-inview ">
-							<img src="{% static 'image/Slide7.JPG' %}" alt="slides">
+							<img src="{% static 'image/Slide7.JPG' %}" alt="slide7">
 						</span>
 						<p>In many ways, Blockchain gaming has already taken the center stage of the gaming world.
 							However, most games featuring Blockchain technologies are very simplistic in appearance and
@@ -473,7 +473,7 @@
 							<p class="uk-scrollspy-inview">The top five NFT projects in terms of all-time sales
 								according to dappradar.com statistics</p>
 							<span class="wll-srtr uk-scrollspy-inview ">
-								<img src="{% static 'img/nft-prject.jpg' %}" alt="nft-sales">
+								<img src="{% static 'img/nft-prject.jpg' %}" alt="nft-prject">
 							</span>
 						</div>
 					</div>
@@ -529,7 +529,7 @@
 					</p>
 					<span class="wll-srtr uk-scrollspy-inview "
 						uk-scrollspy="cls: uk-animation-slide-right; delay: 900; repeat: true" style="">
-						<img src="{% static 'image/sLIDE-16-LOFT-(1).jpg' %}" alt="slide-soft">
+						<img src="{% static 'image/sLIDE-16-LOFT-(1).jpg' %}" alt="sLIDE-16-LOFT-(1)">
 					</span>
 					<p class="uk-scrollspy-inview"
 						uk-scrollspy="cls: uk-animation-slide-left; delay: 500; repeat: true">Celebrities like Snoop
@@ -556,7 +556,7 @@
 					</p>
 					<span class="wll-srtr uk-scrollspy-inview "
 						uk-scrollspy="cls: uk-animation-slide-right; delay: 900; repeat: true">
-						<img src="{% static 'image/SLIDE-17-VIRUAL-CONCERT-B -(1).jpg' %}" alt="">
+						<img src="{% static 'image/SLIDE-17-VIRUAL-CONCERT-B -(1).jpg' %}" alt="SLIDE-17-VIRUAL-CONCERT-B">
 					</span>
 					<p class="uk-scrollspy-inview"
 						uk-scrollspy="cls: uk-animation-slide-left; delay: 500; repeat: true">
@@ -614,7 +614,7 @@
 						purchases.</p>
 					<span class="uk-scrollspy-inview kind_txt "
 						uk-scrollspy="cls: uk-animation-slide-right; delay: 700; repeat: true">
-						<img src="{% static 'image/Slide4.JPG' %}" alt="slides">
+						<img src="{% static 'image/Slide4.JPG' %}" alt="slide4">
 					
 
 					<p class="blck-cntction uk-scrollspy-inview"
@@ -627,7 +627,7 @@
 						connection and a device of any kind.</p>
 					<span class="uk-scrollspy-inview kind_txt "
 						uk-scrollspy="cls: uk-animation-slide-left; delay: 400; repeat: true">
-						<img src="{% static 'image/Slide5.JPG' %}" alt="slides">
+						<img src="{% static 'image/Slide5.JPG' %}" alt="slide5">
 					
 					<p class="uk-scrollspy-inview"
 						uk-scrollspy="cls: uk-animation-slide-right; delay: 400; repeat: true"> As a seamless
@@ -651,21 +651,21 @@
 	<footer>
 		<div class="footer_WNDR  remove_saveimage">
 			<div class="footer-overlap">
-				<img src="{% static 'image/footer-line-top.png' %}" class="top-line" alt="footer1">
-				<img src="{% static 'image/footer-line-top-mobile.png' %}" class="top-line-m0bile" alt="footer2">
-				<img src="{% static 'image/footer-line-down.png' %}" class="bottom-line" alt="footer3">
-				<img src="{% static 'image/footer-line-down-mobile.png' %}" class="bottom-line-mobile" alt="footer4">
+				<img src="{% static 'image/footer-line-top.png' %}" class="top-line" alt="footer-line-top.png">
+				<img src="{% static 'image/footer-line-top-mobile.png' %}" class="top-line-m0bile" alt="footer-line-top-mobile">
+				<img src="{% static 'image/footer-line-down.png' %}" class="bottom-line" alt="footer-line-down">
+				<img src="{% static 'image/footer-line-down-mobile.png' %}" class="bottom-line-mobile" alt="footer-line-down-mobile">
 			</div>
 			<div class="footer-shapes">
-				<img src="{% static 'image/footer-img.png' %}" class="footer-left-ic" alt="footer5">
-				<img src="{% static 'image/footer-img2.png' %}" class="footer-right-ic" alt="footer6">
+				<img src="{% static 'image/footer-img.png' %}" class="footer-left-ic" alt="footer-img.png">
+				<img src="{% static 'image/footer-img2.png' %}" class="footer-right-ic" alt="footer-img2">
 			</div>
 			<div class="container">
 				<div class="footer-outer">
 					<div class="row footer-align">
 						<div class="col-md-3 col-lg-4 mbl-footer-img">
 							<div class="footer-logo">
-								<img src="{% static 'image/header-logo.png' %}" alt="footer7">
+								<img src="{% static 'image/header-logo.png' %}" alt="header-logo">
 							</div>
 						</div>
 						<div class="col-md-5 col-lg-5 copyright-footer">
@@ -967,23 +967,23 @@
 				})
 		</script>
 
-		<script>
+	 <script>
 			$(document).ready(function(){
 			  $(document).mouseleave(function(){
 				  $("#exampleModal").modal("show");
 			  });
 		  });
-		  </script>
+		  </script> 
 
 	
 
-	{% comment %} <script>
+	 <script>
 		$('body').on('mouseover', "i.mage", function(e)  { 
 			$('img').bind("contextmenu",function(e) {
 				return false;
 			 });
 		   })
 
-	</script> {% endcomment %}
+	</script> 
 		
 </html>
