--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,18 +1,13 @@
 <!DOCTYPE html>
 {% load static %}
-
 <html>
-
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Wndr.com</title>
-
 	<!-- slick css -->
 	<link rel="stylesheet" href="{% static 'css/slick.css' %}">
 	<link rel="stylesheet" href="{% static 'css/slick-theme.css' %}">
-	<!--<link rel="stylesheet" href="{% static 'css/uikit.min.css' %}">-->
-
 	<!-- bootstrap-css start -->
 	<link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -20,10 +15,8 @@
 	<!-- link css -->
 	<link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
 	<link rel="stylesheet" type="text/css" href="{% static 'css/custom.css' %}">
-
 	<!-- font awsome -->
 	<script src="https://use.fontawesome.com/b197abb434.js"></script>
-
 	<!-- fav icon -->
 	<link rel="icon" type="image/x-icon" href="{% static 'image/fab-ic.png' %}">
 </head>
@@ -33,19 +26,9 @@
 	<img class="back_to_mode" src="{% static 'image/phone_rotate_black.png' %}">
 </div>
 </div>
-
 <body>
-
 	<!-- Modal -->
 	<div class="mobileportraitview">
-
-
-
-
-
-
-
-
 	<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
 		<div class="modal-dialog">
 			<div class="modal-content sbscribe-bg">
@@ -54,18 +37,9 @@
 						<h2>Subscribe to Our Newsletter</h2>
 						<img src="{% static 'image/nesltr-line.png' %}" class="subscribe-line-pc" alt="newsletter-line">
 						<img src="{% static 'image/subscribe-line-tabs.png' %}" class="subscribe-line-tabs"
-							alt="newsletter-line1">
+							alt="subscribe-line-tabs">
 						<p>Subscribe here to get the latest news on WNDR events, launch dates, SDK release, WNDR coin and NFT drops. </p>
 						<form method="post" onsubmit="return false;">
-
-							<!--<span class="nesltr-btn">
-				  <img src="{% static 'image/sucribe-input-img-center.png' %}" class="sucribe-center-pc" alt="subscribe-1">
-				  <img src="{% static 'image/sucribe-input-img-tabs.png' %}" class="sucribe-center-tabs" alt="subscribe-2">
-				  <img src="{% static 'image/sucribe-btn-center-img-mobile.png' %}" class="sucribe-center-pc-mobile" alt="subscribe-3">
-				  <input type="text" name="myInput" required id="myInput" value="" placeholder="Enter email">
-				  <div class="clearfix"></div>
-			  
-			  </span>-->
 							<div class="sbscribe_btn_input">
 								<span>
 									<input type="email" name="myInput" required id="myInput" value=""
@@ -76,12 +50,6 @@
 								hidden>
 								<span id="sucess" class="contact-error"></span>
 							</div>
-							<!-- <div class="alert alert-danger danger-msg" role="alert">
-					This is a danger alert—check it out!
-				  </div>
-				  <div class="alert alert-danger sueccs-msg" role="alert">
-					This is a danger alert—check it out!
-				  </div> -->
 							<div class="sbscribe-section" id="success_btn">
 								<button class="sbt-btn" id="btn-d" onclick="subscribe()">Submit</button>
 							</div>
@@ -98,16 +66,16 @@
 		<header class="header-tag-WNDR">
 			<div class="header_WNDR">
 				<div class="header-line header-line-shadow1">
-					<img src="{% static 'image/header-line-top.png' %}" class="header-line-pc" alt="header-linee">
+					<img src="{% static 'image/header-line-top.png' %}" class="header-line-pc" alt="header-line-top">
 					<img src="{% static 'image/header-line-top-tabs.png' %}" class="header-line-tabs"
-						alt="header-linee1">
+						alt="header-line-top-tabs">
 					<img src="{% static 'image/header-line-top-mobile.png' %}" class="header-line-mobile"
-						alt="header-linee2">
+						alt="header-line-top-mobile">
 				</div>
 				<div class="container">
 					<nav class="navbar navbar-expand-lg navbar-light">
 						<a class="navbar-brand" href="{% url 'home' %}"><img src="{% static 'image/header-logo.png' %}"
-								alt="logo1"></a>
+								alt="header-logo"></a>
 						<button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse"
 							data-bs-target="#bdNavbar" aria-controls="bdNavbar" aria-expanded="false"
 							aria-label="Toggle navigation">
@@ -136,7 +104,6 @@
 								<li class="nav-item active">
 									<a class="nav-link" href="{% url 'contact' %}">CONTACT</a>
 								</li>
-
 								<div class="btn-header-subscribe">
 									<a href="#" class="" data-bs-toggle="modal"
 										data-bs-target="#exampleModal">SUBSCRIBE</a>
@@ -147,11 +114,11 @@
 				</div>
 				<div class="header-line header-line-shadow">
 					<img src="{% static 'image/header-line-down.png' %}" class="header-line-down-pc"
-						alt="header-line-center">
+						alt="header-line-down">
 					<img src="{% static 'image/header-line-down-tabs.png' %}" class="header-line-down-tabs"
-						alt="header-line-center1">
+						alt="header-line-down-tabs">
 					<img src="{% static 'image/header-line-down-mobile.png' %}" class="header-line-down-mobile"
-						alt="header-line-center2">
+						alt="header-line-down-mobile">
 				</div>
 			</div>
 		</header>
@@ -173,8 +140,8 @@
 			<div class="row">
 				<div class="col-md-12">
 					<div class="form-wndr-outer">
-						<img src="{% static 'img/contact-space.png' %}" class="space-contact" alt="space-1">
-						<img src="{% static 'img/contact-space-left.png' %}" class="space-contact1" alt="space-2">
+						<img src="{% static 'img/contact-space.png' %}" class="space-contact" alt="contact-space">
+						<img src="{% static 'img/contact-space-left.png' %}" class="space-contact1" alt="contact-space-left">
 						<h1 class="uk-scrollspy-inview"
 							uk-scrollspy="cls: uk-animation-slide-top; delay: 200; repeat: true">GET IN TOUCH</h1>
 
@@ -231,10 +198,10 @@
 					uk-scrollspy="cls: uk-animation-slide-top; delay: 200; repeat: true">
 					<div class="location-outer">
 						<div class="location-icon">
-							<img src="{% static 'img/location-ic-contact.png' %}" class="location-1-img" alt="1-image">
+							<img src="{% static 'img/location-ic-contact.png' %}" class="location-1-img" alt="location-ic-contact">
 						</div>
 						<div class="location-icon">
-							<img src="{% static 'img/location-ic-contact-line.png' %}" alt="location-1"
+							<img src="{% static 'img/location-ic-contact-line.png' %}" alt="location-ic-contact-line"
 								class="location-img">
 							<h2>LOCATION:</h2>
 							<p>NEW YORK<br> MIAMI </p>
@@ -246,10 +213,10 @@
 				uk-scrollspy="cls: uk-animation-slide-left; delay: 700; repeat: true">
 				<div class="location-outer">
 					<div class="location-icon">
-						<img src="{% static 'img/email-ic-contact.png' %}" class="location-1-img" alt="3-image">
+						<img src="{% static 'img/email-ic-contact.png' %}" class="location-1-img" alt="email-ic-contact">
 					</div>
 					<div class="location-icon">
-						<img src="{% static 'img/location-ic-contact-line.png' %}" alt="location-1"
+						<img src="{% static 'img/location-ic-contact-line.png' %}" alt="location-ic-contact-line"
 							class="location-img">
 						<h2>EMAIL:</h2>
 						<p class="detail-sec-number"><a href="mailto:INFO@Wndr.com">INFO@Wndr.com</a></p>
@@ -286,21 +253,21 @@
 	<footer>
 		<div class="footer_WNDR footer-roadmap remove_saveimage">
 			<div class="footer-overlap">
-				<img src="{% static 'image/footer-line-top.png' %}" class="top-line" alt="footer1">
-				<img src="{% static 'image/footer-line-top-mobile.png' %}" class="top-line-m0bile" alt="footer2">
-				<img src="{% static 'image/footer-line-down.png' %}" class="bottom-line" alt="footer3">
-				<img src="{% static 'image/footer-line-down-mobile.png' %}" class="bottom-line-mobile" alt="footer4">
+				<img src="{% static 'image/footer-line-top.png' %}" class="top-line" alt="footer-line-top">
+				<img src="{% static 'image/footer-line-top-mobile.png' %}" class="top-line-m0bile" alt="footer-line-top-mobile">
+				<img src="{% static 'image/footer-line-down.png' %}" class="bottom-line" alt="footer-line-down">
+				<img src="{% static 'image/footer-line-down-mobile.png' %}" class="bottom-line-mobile" alt="footer-line-down-mobile">
 			</div>
 			<div class="footer-shapes">
-				<img src="{% static 'image/footer-img.png' %}" class="footer-left-ic" alt="footerleft_img">
-				<img src="{% static 'image/footer-img2.png' %}" class="footer-right-ic" alt="footer6">
+				<img src="{% static 'image/footer-img.png' %}" class="footer-left-ic" alt="footer-img">
+				<img src="{% static 'image/footer-img2.png' %}" class="footer-right-ic" alt="footer-img2">
 			</div>
 			<div class="container">
 				<div class="footer-outer">
 					<div class="row footer-align">
 						<div class="col-md-3 col-lg-4 mbl-footer-img">
 							<div class="footer-logo">
-								<img src="{% static 'image/header-logo.png' %}" alt="footerLogo">
+								<img src="{% static 'image/header-logo.png' %}" alt="header-logo">
 							</div>
 						</div>
 						<div class="col-md-5 col-lg-5 copyright-footer">
