--- a/templates/roadmap.html
+++ b/templates/roadmap.html
@@ -41,7 +41,7 @@
 			<div class="modal-outer">
 		  <h2>Subscribe to Our Newsletter</h2>
 		  <img src="{% static 'image/nesltr-line.png' %}" class="subscribe-line-pc" alt="newsletter-line">
-		  <img src="{% static 'image/subscribe-line-tabs.png' %}" class="subscribe-line-tabs" alt="newsletter-line1">
+		  <img src="{% static 'image/subscribe-line-tabs.png' %}" class="subscribe-line-tabs" alt="subscribe-line-tabs">
 		  <p>Subscribe here to get the latest news on WNDR events, launch dates, SDK release, WNDR coin and NFT drops.</p>
   			<form method="post" onsubmit="return false;">
 
@@ -83,13 +83,13 @@
 		<header class="header-tag-WNDR">
 	    <div class="header_WNDR">
 			    <div class="header-line header-line-shadow1">
-					<img src="{% static 'image/header-line-top.png' %}" class="header-line-pc" alt="header-linee">
-					<img src="{% static 'image/header-line-top-tabs.png' %}" class="header-line-tabs" alt="header-linee1">
-					<img src="{% static 'image/header-line-top-mobile.png' %}" class="header-line-mobile" alt="header-linee2">
+					<img src="{% static 'image/header-line-top.png' %}" class="header-line-pc" alt="header-line-top">
+					<img src="{% static 'image/header-line-top-tabs.png' %}" class="header-line-tabs" alt="header-line-top-tabs">
+					<img src="{% static 'image/header-line-top-mobile.png' %}" class="header-line-mobile" alt="header-line-top-mobile">
 				  </div>
 				<div class="container">
 					<nav class="navbar navbar-expand-lg navbar-light">
-					  <a class="navbar-brand" href="{% url 'home' %}"><img src="{% static 'image/header-logo.png' %}" alt="logo1"></a>
+					  <a class="navbar-brand" href="{% url 'home' %}"><img src="{% static 'image/header-logo.png' %}" alt="header-logo"></a>
 					  <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#bdNavbar" aria-controls="bdNavbar" aria-expanded="false" aria-label="Toggle navigation">
 				      <svg xmlns="http://www.w3.org/2000/svg" class="bi" fill="currentColor" viewBox="0 0 16 16">
 				  <path fill-rule="evenodd" d="M2.5 11.5A.5.5 0 0 1 3 11h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4A.5.5 0 0 1 3 7h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4A.5.5 0 0 1 3 3h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z"></path>
@@ -123,9 +123,9 @@
 					</nav>
 				</div>
 				<div class="header-line header-line-shadow">
-				    <img src="{% static 'image/header-line-down.png' %}" class="header-line-down-pc" alt="header-line-center">
-				    <img src="{% static 'image/header-line-down-tabs.png' %}" class="header-line-down-tabs" alt="header-line-center1">
-				    <img src="{% static 'image/header-line-down-mobile.png' %}" class="header-line-down-mobile" alt="header-line-center2"> 
+				    <img src="{% static 'image/header-line-down.png' %}" class="header-line-down-pc" alt="header-line-down">
+				    <img src="{% static 'image/header-line-down-tabs.png' %}" class="header-line-down-tabs" alt="header-line-down-tabs">
+				    <img src="{% static 'image/header-line-down-mobile.png' %}" class="header-line-down-mobile" alt="header-line-down-mobile"> 
 			    </div>
 		  </div>
 		</header>
@@ -155,18 +155,18 @@
 					WNDR is the next evolution of scalable, blockchain-powered, social-focused gaming in the metaverse. The company’s first official game title, “The Colosseum,” is set in the futuristic world of WNDR.LAND, WNDRs streaming technology enables small teams to create high-end game experiences without a traditional publisher or game studio. WNDR represents the next evolution of scalable, blockchain-powered, social-focused gaming in the metaverse.</p>
 				</div> -->
 				<!---End Company Section-->
-				<!---Start the company section---->	
+				<!---Start the company section -->	
 				<div class="roadmap_company_section">
 					<span class="abt_top_btm_section">
-						<img src="/static/img/contact-space.png" class="space-contact" alt="space-1">
-						<img src="/static/img/contact-space-left.png" class="space-contact1" alt="space-2">
+						<img src="/static/img/contact-space.png" class="space-contact" alt="contact-space">
+						<img src="/static/img/contact-space-left.png" class="space-contact1" alt="ontact-space-left">
 						<h2>The Company</h2>
 						<img src="{% static 'img/Hr.png' %}" alt="Hr-line">
 						<p>WNDR powers browser-based premium multiplayer meta-games, virtual events and immersive open worlds distributed on any connected device with a simple web link. Our Streaming engine distributes with the “click-to-share” ease of a Youtube video. 
 						WNDR is the next evolution of scalable, blockchain-powered, social-focused gaming in the metaverse. The company’s first official game title, “The Colosseum,” is set in the futuristic world of WNDR.LAND, WNDRs streaming technology enables small teams to create high-end game experiences without a traditional publisher or game studio. WNDR represents the next evolution of scalable, blockchain-powered, social-focused gaming in the metaverse.</p>
 					</span>
 				</div>
-				<!---End the company section----->
+				<!---End the company section-->
 				</div>
 			<div class="col-lg-7 col-md-12 model-market offset-md-1">
 				<h2 class="uk-scrollspy-inview" uk-scrollspy="cls: uk-animation-slide-top; delay: 200; repeat: true">What does WNDR offer?</h2>
@@ -187,18 +187,18 @@
 	</div>
 <!----End About Us---->	
 <div class="roadmap-center-line">
-	<img src="{% static 'img/rdmp-line.png' %}" alt="desktop-hr">
+	<img src="{% static 'img/rdmp-line.png' %}" alt="rdmp-line">
 </div>
 <section class="home-testimonial main_about_testimonail">
 <div class="container-fluid">
 <div class="roadmap-tablet-view">
-	<img src="{% static 'img/roadm-tab.png' %}" alt="line">
+	<img src="{% static 'img/roadm-tab.png' %}" alt="roadm-tab">
 </div>
 <div class="roadmap-desktop-section">
 <div class="container roadmap-section">
 	<div class="row">
 		<div class="col-lg-12 col-md-12">
-			<h1 class="uk-scrollspy-inview" uk-scrollspy="cls: uk-animation-slide-top; delay: 200; repeat: true">Roadmap</h1>
+			<h2 class="uk-scrollspy-inview" uk-scrollspy="cls: uk-animation-slide-top; delay: 200; repeat: true">Roadmap</h2>
 		</div>
 	</div>
 </div>
@@ -260,7 +260,7 @@
 			</div>
 		</div>
 		<div class="col-lg-2 col-md-2 text-center rdmp-cntr">
-			<img src="{% static 'img/road-map-cntr-img.png' %}" alt="roadmap-line">
+			<img src="{% static 'img/road-map-cntr-img.png' %}" alt="road-map-cntr">
 		</div>
 		<div class="col-lg-5 col-md-5 rygt-rdmp-line">
 			<div class="phse-cloud-gmng">
@@ -273,7 +273,7 @@
 					<p class="pltfrm-wb">LAUNCH TITLE | THE COLOSSEUM</p>
 					<p class="pltfrm-wb">3D MULTIPLAYER IMMERSIVE BATTLE EXPERIENCE</p>
 					<p class="pltfrm-wb">POWERED BY WNDR.STREAM TECHNOLOGY</p>
-					<p class="status_cmplete"><Span>STATUS</Span><span> <<<</span>Complete<span> >>></span></p>
+					<p class="status_cmplete"><Span>STATUS</Span><span> </span>Complete<span> >>></span></p>
 				</div>
 				<h4>Key Objectivess </h4>
 				<ul>
@@ -379,7 +379,7 @@
 						</div>
 						<p class="rdmp-phasetw-tab"><span>Phase 02</span></p>
 						<h2><span class="wndr-tb-exp">WNDR.LAND | ORIGINS </span> ADDITIONAL GAMING EXPERIENCES SHOWCASE THE EXPANSION OF THE WNDR.LAND DIGITAL WORLD
-							STATUS <span class="road_map_status"> <<< </span>IN DEVELOPMENT<span> >>> </span>
+							STATUS <span class="road_map_status">  </span>IN DEVELOPMENT<span> >>> </span>
 							 </h2>
 						<p class="ky-strmng">Key Objectivess</p>
 						<ul>
@@ -389,7 +389,7 @@
 							<li>Feature MetaHuman Integration</li>
 							<li>Support Live In-Game NFT Drops</li>
 						</ul>
-						<p class="cmplt-txt"><span><<<</span>Line Items Above are Complete<span>>>></span></p>
+						<p class="cmplt-txt"><span></span>Line Items Above are Complete<span>>>></span></p>
 					</div>
 					<div class="rodmap-tablet-cloudgaming">
 						<div class="phase-stcn-gaming expnd-ehance-sectn">
@@ -398,7 +398,7 @@
 						<p class="rdmp-cloudgaming-tab"><span>Phase 03</span></p>
 						<h2><span class="wndr-tb-cld">WNDR.LAND |</span>  EXPAND & ENHANCE</span></h2>
 						<p class="ky-objectve">CREATION OF FURTHER EXPERIENCES EXPANDING THE WORLD OF WNDR.</p>
-						<h2 class="road_map_status">STATUS <span><<< </span>PLANNING<span></span> >>></span></h2>
+						<h2 class="road_map_status">STATUS <span> </span>PLANNING<span></span> >>></span></h2>
 						<ul>
 							<li>Expand development team</li>
 							<li>Development of multiple mini game experiences</li>
@@ -415,7 +415,7 @@
 						<p class="rdmp-phasetw-tab"><span>Phase 04</span></p>
 						<h2><span class="wndr-tb-exp">WNDR.LAND | </span>OPEN WORLD </h2>
 							<h2 class="bulid_out_txt">BUILD OUT & DEVELOPMENT OF VIRTUAL OPEN WORLD TECHNOLOGY THAT EXPANDS THE PLAYABLE UNIVERSE OF WNDR.</h2>
-						<p class="ky-objectve">STATUS <Span> <<< </Span>PLANNING<span> >>> </span></p>
+						<p class="ky-objectve">STATUS <Span>  </Span>PLANNING<span> >>> </span></p>
 						<p class="ky-strmng">Key Objectivess</p>
 						<ul>
 							<li>Virtual real estate pre-sales</li>
@@ -448,21 +448,21 @@
 <footer>
 	<div class="footer_WNDR footer-roadmap remove_saveimage">
 		<div class="footer-overlap">
-			<img src="{% static 'image/footer-line-top.png' %}" class="top-line" alt="footer1">
-			<img src="{% static 'image/footer-line-top-mobile.png' %}" class="top-line-m0bile" alt="footer2">
-			<img src="{% static 'image/footer-line-down.png' %}" class="bottom-line" alt="footer3">
-			<img src="{% static 'image/footer-line-down-mobile.png' %}" class="bottom-line-mobile" alt="footer4">
+			<img src="{% static 'image/footer-line-top.png' %}" class="top-line" alt="footer-line-top">
+			<img src="{% static 'image/footer-line-top-mobile.png' %}" class="top-line-m0bile" alt="footer-line-top-mobile">
+			<img src="{% static 'image/footer-line-down.png' %}" class="bottom-line" alt="footer-line-down">
+			<img src="{% static 'image/footer-line-down-mobile.png' %}" class="bottom-line-mobile" alt="footer-line-down-mobile">
 		</div>
 		<div class="footer-shapes">
-			<img src="{% static 'image/footer-img.png' %}" class="footer-left-ic" alt="footer5"> 
-			<img src="{% static 'image/footer-img2.png' %}" class="footer-right-ic" alt="footer6">
+			<img src="{% static 'image/footer-img.png' %}" class="footer-left-ic" alt="footer-img"> 
+			<img src="{% static 'image/footer-img2.png' %}" class="footer-right-ic" alt="footer-img2">
 		</div>
 		<div class="container">
 			<div class="footer-outer">
 				<div class="row footer-align">
 					<div class="col-md-3 col-lg-4 mbl-footer-img">
 						<div class="footer-logo">
-							<img src="{% static 'image/header-logo.png' %}" alt="footer7">
+							<img src="{% static 'image/header-logo.png' %}" alt="header-logo>
 						</div>
 					</div>
 					<div class="col-md-5 col-lg-5 copyright-footer">
@@ -536,7 +536,7 @@
 	  document.body.scrollTop = 0;
 	  document.documentElement.scrollTop = 0;
 	}
-	</script>
+</script>
 <script>
 function myFunction() {
 	console.log("Arrival-4")
@@ -585,7 +585,7 @@ function myFunction() {
 	}
 	};
 	}
-	</script> 
+</script> 
 	<script>
 
 		$(function() {  
@@ -599,11 +599,5 @@ function myFunction() {
 				return false;
 			})
 		</script>
-		<script>
-			$(document).ready(function(){
-			  $(document).mouseleave(function(){
-				  $("#exampleModal").modal("show");
-			  });
-		  });
-		  </script>
+		
 </html>
